test/pass/api/list/list_unshift.lly
var v = [1, 2, 3]

v.unshift(0)

if v != [0, 1, 2, 3]:
    stderr.print("Failed.")


v.clear()

v.unshift(3)
v.unshift(2)
v.unshift(1)

if v != [1, 2, 3]:
    stderr.print("Failed.")
